[metadata]
name=flake8_selection
version=0.1.0
description=My own selection of linting plugins (mainly flake8).
author=JPFrancoia
author_email=jeanpatrick.francoia@gmail.com
# long_description = file: README.md


[options]
python_requires=>=3.6.1

install_requires=
    darglint
    flake8-annotations
    flake8-bugbear
    flake8-comprehensions
    flake8-docstrings
    flake8-mutable
    flake8-mypy
    flake8-print
    flake8-variables-names
    pandas-vet
    pycodestyle
    pep8-naming
